--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "express": "^5.1.0",
-    "socket.io": "^4.8.1"
+    "express": "^5.1.0"
   }
 }
